--- a/test-1.html
+++ b/test-1.html
@@ -596,31 +596,20 @@
 </style>
 
       <div style="text-align: right;">
-
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Total Score</span>
-
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">216</span>
-
     </div>
 
     <div style="text-align: right;">
-
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Par</span>
-
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">E</span>
-
     </div>
 
     <div style="text-align: right;">
-
       <span style="color: rgba(255,255,255,0.6); font-size: 9px; font-weight: 800; display: block; text-transform: uppercase;">Final Rank</span>
-
       <span style="color: #ffffff; font-size: 18px; font-weight: 900;">T3</span>
-
     </div>
-
   </div>
-
 </div>
   
 
@@ -629,16 +618,16 @@
 
 
 
-<div class="current-focus-section" style="max-width: 900px; margin: 60px auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="current-focus-section" style="width: 900px; max-width: 900px; margin: 60px auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
     <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center; box-sizing: border-box;">
-        <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">
+        <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">
             Current Focus
         </h1>
     </div>
 </div>
 
-<div class="legal-pad-wrapper" style="max-width: 900px; margin: 0 auto 100px; position: relative; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; padding: 0 15px; box-sizing: border-box;">
+<div class="legal-pad-wrapper" style="width: 900px; max-width: 900px; margin: 0 auto 100px; position: relative; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; padding: 0 15px; box-sizing: border-box;">
     <div style="width: 100%; height: 35px; background: #334155; border-radius: 20px 20px 0 0; position: relative; z-index: 2; box-shadow: inset 0 -5px 10px rgba(0,0,0,0.2); border: 1px solid #1e293b; box-sizing: border-box;">
         <div style="display: flex; justify-content: center; gap: 40px; padding-top: 10px; box-sizing: border-box;">
             <div style="width: 12px; height: 12px; background: #1e293b; border-radius: 50%; box-sizing: border-box;"></div>
@@ -652,18 +641,18 @@
         <div style="position: absolute; left: 65px; top: 0; bottom: 0; width: 2px; border-left: 1px solid #ff8a80; border-right: 1px solid #ff8a80; pointer-events: none; box-sizing: border-box;"></div>
 
         <div style="margin-bottom: 45px; position: relative; box-sizing: border-box;">
-            <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase;">Date: Feb 05, 2026</span>
-            <h3 style="margin: 10px 0 0 0; color: #0c2340; font-size: 24px; font-weight: 900; text-transform: uppercase; border-bottom: 2px solid #0c2340; display: inline-block;">
+            <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase; box-sizing: border-box;">Date: Feb 05, 2026</span>
+            <h3 style="margin: 10px 0 0 0; color: #0c2340; font-size: 24px; font-weight: 900; text-transform: uppercase; border-bottom: 2px solid #0c2340; display: inline-block; box-sizing: border-box;">
                 Performance Analysis & Training Plan
             </h3>
         </div>
 
         <div class="memo-body" style="display: flex; flex-direction: column; gap: 28px; max-width: 100%; position: relative; z-index: 1; margin-bottom: 50px; box-sizing: border-box;">
             <div style="display: flex; gap: 15px; align-items: flex-start; box-sizing: border-box;">
-                <span style="font-size: 20px; color: #0c2340; font-weight: 900;">01.</span>
+                <span style="font-size: 20px; color: #0c2340; font-weight: 900; box-sizing: border-box;">01.</span>
                 <div style="box-sizing: border-box;">
                     <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">R3 Technical Feedback</h4>
-                    <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500;">
+                    <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box;">
                         <strong>Status:</strong> Increased yardage applied under narrow fairway/high-wind conditions. Driver and long-iron dispersion data recorded for technical adjustment and subsequent training. <br>
                         <strong>Focus:</strong> Maintaining consistent short-game execution (wedge/putting) while prioritizing dispersion recalibration.
                     </p>
@@ -671,10 +660,10 @@
             </div>
 
             <div style="display: flex; gap: 15px; align-items: flex-start; box-sizing: border-box;">
-                <span style="font-size: 20px; color: #0c2340; font-weight: 900;">02.</span>
+                <span style="font-size: 20px; color: #0c2340; font-weight: 900; box-sizing: border-box;">02.</span>
                 <div style="box-sizing: border-box;">
                     <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Corrective Training</h4>
-                    <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500;">
+                    <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box;">
                         <strong>Feb 4:</strong> Technical training session conducted to address driver dispersion and long-iron control in preparation for the home tournament (Feb 23–24). Academic scheduling adjustments finalized to maintain balance with upcoming competition commitments.
                     </p>
                 </div>
@@ -690,15 +679,15 @@
             </div>
             
             <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 1px solid #f1f5f9; padding-bottom: 10px; margin-bottom: 12px; box-sizing: border-box;">
-                <h5 style="margin: 0; font-size: 14px; color: #d32f2f; font-weight: 900; text-transform: uppercase;">Next Event Focus & Updates</h5>
-                <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase;">Spring Opener Technical Memo</span>
+                <h5 style="margin: 0; font-size: 14px; color: #d32f2f; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">Next Event Focus & Updates</h5>
+                <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; box-sizing: border-box;">Spring Opener Technical Memo</span>
             </div>
             <div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
-                <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px;">
+                <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
                     • Target: Home-Field Team Title<br>
                     • Drills: Dispersion Control (w/ Bryan)
                 </p>
-                <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px;">
+                <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
                     • Academic: Coursework management<br>
                     • Status: Training Schedule Optimized
                 </p>
