--- a/test-1.html
+++ b/test-1.html
@@ -699,6 +699,148 @@
 </div>
   
 
+
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
+
+<div style="width: 100%; max-width: 900px; margin: 60px auto 30px auto; padding: 0; background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; font-family: 'Oswald', sans-serif; box-shadow: 0 4px 20px rgba(0,0,0,0.05); box-sizing: border-box; overflow: hidden;">
+  <div style="padding: 30px; box-sizing: border-box;">
+    <h2 style="display: inline-block; background: #F15A22; color: #ffffff; padding: 5px 15px; border-radius: 4px; font-size: 1.4em; margin-bottom: 5px; font-weight: 600; letter-spacing: 0.5px; margin-top: 0;">Performance Data Analysis</h2>
+    <p style="font-size: 0.85em; color: #888; margin-bottom: 35px; font-family: 'Montserrat', sans-serif; padding-left: 5px;">Tournament & Internal Qualifier Verified Records.</p>
+    
+    <div style="margin-bottom: 60px; position: relative;">
+      <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #F15A22; padding-bottom: 8px;">
+        <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500;">Official Tournament Rounds</h3>
+        <span style="background: #0c2340; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500;">Freshman Season</span>
+      </div>
+      
+      <div style="position: relative; height: 440px; background: #fafafa; border-radius: 8px; padding: 35px 15px 45px 15px;">
+        <div style="position: absolute; top: 15px; right: 20px; z-index: 10; background: rgba(12, 35, 64, 0.05); border: 1px solid #0c2340; padding: 5px 12px; border-radius: 20px; display: flex; align-items: center; gap: 8px;">
+          <span style="font-family: 'Montserrat', sans-serif; font-size: 0.8em; font-weight: 700; color: #0c2340;">Adj. Avg:</span>
+          <span style="font-size: 1.1em; font-weight: 700; color: #0c2340;">71.0</span>
+        </div>
+
+        <canvas id="officialTournamentChart"></canvas>
+
+        <div style="position: absolute; bottom: 12px; left: 15px; right: 15px; display: flex; justify-content: space-between; font-family: 'Montserrat', sans-serif; font-size: 0.75em; color: #666; border-top: 1px dashed #ddd; padding-top: 8px;">
+          <span><strong>Source:</strong> Scoreboard.Clipped</span>
+          <span><strong>Cumulative:</strong> 5 eventos / 15 rondas</span>
+        </div>
+      </div>
+    </div>
+
+    <div style="position: relative;">
+      <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #806600; padding-bottom: 8px;">
+        <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500;">Internal Qualifier Rounds</h3>
+        <span style="background: #806600; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500;">TPC San Antonio</span>
+      </div>
+      <div style="position: relative; height: 400px; background: #fafafa; border-radius: 8px; padding: 15px;">
+        <canvas id="internalQualifierChart"></canvas>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script>
+Chart.register(ChartDataLabels);
+Chart.defaults.font.family = "'Oswald', sans-serif";
+
+// 1. Official Tournament Chart
+const ctxOfficial = document.getElementById('officialTournamentChart').getContext('2d');
+new Chart(ctxOfficial, {
+  type: 'line',
+  data: {
+    labels: ['9/07 (Argent)', '9/15 (Highlands)', '9/22 (Badger)', '10/05 (Trinity)', '12/27 (Patriot)', '2/01 (Compadres)'],
+    datasets: [{
+      label: 'Scoring Avg',
+      data: [69.66, 71.66, 72.66, 74.00, 72.00, 72.00],
+      borderColor: '#F15A22',
+      backgroundColor: 'rgba(241, 90, 34, 0.05)',
+      borderWidth: 2.5,
+      pointRadius: [10, 6, 6, 6, 6, 12],
+      pointHoverRadius: [12, 8, 8, 8, 8, 14],
+      pointBackgroundColor: (context) => {
+        const i = context.dataIndex;
+        return (i === 0 || i === 5) ? '#F15A22' : '#0c2340';
+      },
+      pointBorderColor: '#fff',
+      pointBorderWidth: 2,
+      tension: 0.2,
+      fill: true,
+      datalabels: {
+        align: 'top',
+        anchor: 'end',
+        offset: 12,
+        padding: { top: 6, bottom: 6, left: 10, right: 10 },
+        backgroundColor: (context) => {
+          const i = context.dataIndex;
+          return (i === 0 || i === 5) ? '#F15A22' : 'transparent';
+        },
+        borderRadius: 25,
+        color: '#0c2340',
+        font: { weight: '700', size: 14 },
+        formatter: function(value, context) {
+          const ranks = ['T9', 'T12', 'T24', 'T55', 'T38', 'T3'];
+          return ranks[context.dataIndex];
+        }
+      }
+    }]
+  },
+  options: {
+    responsive: true,
+    maintainAspectRatio: false,
+    layout: { padding: { top: 30, bottom: 10 } },
+    interaction: { mode: 'nearest', intersect: true },
+    scales: {
+      y: {
+        min: 65,
+        max: 82,
+        grid: { color: '#e5e5e5', drawBorder: false },
+        ticks: { font: { size: 12, weight: '600' }, color: '#333', padding: 10 },
+        title: { display: true, text: 'Avg. Strokes', color: '#333', font: { size: 12, weight: '700' } }
+      },
+      x: {
+        grid: { display: false },
+        ticks: { color: '#333', font: { size: 10, weight: '400' } }
+      }
+    },
+    plugins: {
+      legend: { display: false },
+      tooltip: {
+        enabled: true,
+        yAlign: 'bottom',
+        backgroundColor: '#0c2340',
+        titleColor: '#F15A22',
+        titleFont: { size: 13, weight: '600' },
+        bodyColor: '#ffffff',
+        bodyFont: { family: "'Montserrat'", size: 11 },
+        padding: 12,
+        cornerRadius: 4,
+        displayColors: false,
+        callbacks: {
+          afterLabel: function(context) {
+            const rounds = ['70-70-69 (-7)', '74-71-70 (-1)', '71-71-76 (+2)', '75-73-74 (+6)', '71-73-72 (+6)', '70-75-71 (E)'];
+            const rank = ['T9', 'T12', 'T24', 'T55', 'T38', 'T3'];
+            const pwr = ['230.8799', '232.6656', '129.0694', '360.1597', '806.3420', '145.6033'];
+            const earned = ['5.3735', '4.9097', '3.3178', '3.1971', '6.1052', '6.5774'];
+            const i = context.dataIndex;
+            return [
+              '',
+              `Rounds: ${rounds[i]}`,
+              `Rank: ${rank[i]}`,
+              `-----------------------`,
+              `WAGR Pwr: ${pwr[i]}`,
+              `Earned: ${earned[i]}`,
+              i === 5 ? `Rank ▲ 136` : null
+            ].filter(v => v !== null);
+          }
+        }
+      },
+      datalabels: { display: true }
+    }
+  }
+});
   
 
 
