--- a/test-1.html
+++ b/test-1.html
@@ -700,7 +700,8 @@
   
 
 
-
+/*토너먼트 그래프 차트 시작*/
+  
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
 
@@ -710,7 +711,7 @@
       <h2 style="display: inline-block; background: #F15A22; color: #ffffff; padding: 5px 15px; border-radius: 4px; font-size: 1.4em; margin-bottom: 5px; font-weight: 600; letter-spacing: 0.5px; margin-top: 0;">Performance Data Analysis</h2>
       <p style="font-size: 0.85em; color: #888; margin-bottom: 35px; font-family: 'Montserrat', sans-serif; padding-left: 5px;">Tournament & Internal Qualifier Verified Records.</p>
       
-      <div style="margin-bottom: 60px; position: relative;">
+      <div style="margin-bottom: 30px; position: relative;">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #F15A22; padding-bottom: 8px;">
           <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500;">Official Tournament Rounds</h3>
           <span style="background: #0c2340; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500;">Freshman Season</span>
@@ -730,23 +731,12 @@
           </div>
         </div>
       </div>
-
-      <div style="position: relative;">
-        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #806600; padding-bottom: 8px;">
-          <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500;">Internal Qualifier Rounds</h3>
-          <span style="background: #806600; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500;">TPC San Antonio</span>
-        </div>
-        <div style="position: relative; height: 400px; background: #fafafa; border-radius: 8px; padding: 15px;">
-          <canvas id="archiveInternalChart"></canvas>
-        </div>
-      </div>
     </div>
   </div>
 </div>
 
 <script>
 (function() {
-  // 중복 등록 방지 로직
   if (typeof ChartDataLabels !== 'undefined') {
     try {
       Chart.register(ChartDataLabels);
@@ -757,7 +747,6 @@
   
   Chart.defaults.font.family = "'Oswald', sans-serif";
 
-  // 1. Official Tournament Chart (Modified ID)
   const ctxOfficialArchive = document.getElementById('archiveOfficialChart').getContext('2d');
   new Chart(ctxOfficialArchive, {
     type: 'line',
@@ -849,33 +838,6 @@
           }
         },
         datalabels: { display: true }
-      }
-    }
-  });
-
-  // 2. Internal Qualifier Chart (Modified ID)
-  // 데이터 및 옵션은 원본의 구조를 100% 유지하여 초기화만 수행
-  const ctxInternalArchive = document.getElementById('archiveInternalChart').getContext('2d');
-  new Chart(ctxInternalArchive, {
-    type: 'bar',
-    data: {
-      labels: ['Qualifier 1', 'Qualifier 2', 'Qualifier 3', 'Qualifier 4', 'Qualifier 5'],
-      datasets: [{
-        label: 'Score',
-        data: [72, 70, 75, 71, 69],
-        backgroundColor: '#806600',
-        borderRadius: 5
-      }]
-    },
-    options: {
-      responsive: true,
-      maintainAspectRatio: false,
-      scales: {
-        y: { beginAtZero: false, min: 60, max: 80 }
-      },
-      plugins: {
-        legend: { display: false },
-        datalabels: { display: false }
       }
     }
   });
