--- a/test-1.html
+++ b/test-1.html
@@ -700,18 +700,18 @@
   
 
 
-/*토너먼트 그래프 차트 시작*/
+//*토너먼트 그래프 차트 시작*//
   
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
 
-<div class="performance-analysis-wrapper" style="width: 100%; max-width: 900px; margin: 60px auto 30px auto; padding: 0 15px; background: transparent; font-family: 'Oswald', sans-serif; box-sizing: border-box;">
+<div class="performance-analysis-wrapper" style="width: 100%; max-width: 900px; margin: 60px auto 30px auto; padding: 0; background: transparent; font-family: 'Oswald', sans-serif; box-sizing: border-box;">
   <div style="background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box;">
-    <div style="padding: 30px; box-sizing: border-box;">
-      <h2 style="display: inline-block; background: #F15A22; color: #ffffff; padding: 5px 15px; border-radius: 4px; font-size: 1.4em; margin-bottom: 5px; font-weight: 600; letter-spacing: 0.5px; margin-top: 0;">Performance Data Analysis</h2>
+    <div style="padding: 30px; box-sizing: border-box; text-align: center;">
+      <h2 style="display: inline-block; background: #F15A22; color: #0c2340; padding: 5px 15px; border-radius: 4px; font-size: 1.4em; margin-bottom: 5px; font-weight: 600; letter-spacing: 0.5px; margin-top: 0;">Performance Data Analysis</h2>
       <p style="font-size: 0.85em; color: #888; margin-bottom: 35px; font-family: 'Montserrat', sans-serif; padding-left: 5px;">Tournament & Internal Qualifier Verified Records.</p>
       
-      <div style="margin-bottom: 30px; position: relative;">
+      <div style="margin-bottom: 30px; position: relative; text-align: left;">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #F15A22; padding-bottom: 8px;">
           <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500;">Official Tournament Rounds</h3>
           <span style="background: #0c2340; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500;">Freshman Season</span>
