--- a/test-1.html
+++ b/test-1.html
@@ -698,36 +698,34 @@
     </div>
 </div>
   
-
-
-//*토너먼트 그래프 차트 시작*//
   
+<link href="https://fonts.googleapis.com/css2?family=Marcellus&family=Montserrat:wght@400;700&family=Oswald:wght@400;600&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
 
-<div class="performance-analysis-wrapper" style="width: 100%; max-width: 900px; margin: 60px auto 30px auto; padding: 0; background: transparent; font-family: 'Oswald', sans-serif; box-sizing: border-box;">
+<div class="performance-analysis-wrapper" style="width: 100%; max-width: 900px; margin: 60px auto 30px auto; padding: 0; background: transparent; box-sizing: border-box;">
   <div style="background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box;">
-    <div style="padding: 30px; box-sizing: border-box; text-align: center;">
-      <h2 style="display: inline-block; background: #F15A22; color: #0c2340; padding: 5px 15px; border-radius: 4px; font-size: 1.4em; margin-bottom: 5px; font-weight: 600; letter-spacing: 0.5px; margin-top: 0;">Performance Data Analysis</h2>
-      <p style="font-size: 0.85em; color: #888; margin-bottom: 35px; font-family: 'Montserrat', sans-serif; padding-left: 5px;">Tournament & Internal Qualifier Verified Records.</p>
+    <div style="padding: 40px 20px; box-sizing: border-box; text-align: center;">
+      <h2 style="color: #0c2340; font-family: 'Marcellus', serif; font-size: 2.2em; margin-bottom: 5px; font-weight: 400; letter-spacing: 1px; margin-top: 0; text-transform: uppercase;">Performance Data Analysis</h2>
+      <p style="font-size: 0.9em; color: #666; margin-bottom: 40px; font-family: 'Montserrat', sans-serif; letter-spacing: 1px; font-weight: 400;">Official Tournaments Verified Records</p>
       
-      <div style="margin-bottom: 30px; position: relative; text-align: left;">
-        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #F15A22; padding-bottom: 8px;">
-          <h3 style="font-size: 1.1em; color: #0c2340; margin: 0; font-weight: 500;">Official Tournament Rounds</h3>
-          <span style="background: #0c2340; color: #fff; padding: 4px 10px; font-size: 0.8em; border-radius: 3px; font-weight: 500;">Freshman Season</span>
+      <div style="margin-bottom: 10px; position: relative; text-align: left;">
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #0c2340; padding-bottom: 8px;">
+          <h3 style="font-family: 'Oswald', sans-serif; font-size: 1.2em; color: #0c2340; margin: 0; font-weight: 600; text-transform: uppercase; letter-spacing: 0.5px;">Official Tournament Records</h3>
+          <span style="background: #0c2340; color: #fff; padding: 4px 12px; font-family: 'Oswald', sans-serif; font-size: 0.85em; border-radius: 3px; font-weight: 500; letter-spacing: 0.5px;">FRESHMAN SEASON</span>
         </div>
         
-        <div style="position: relative; height: 440px; background: #fafafa; border-radius: 8px; padding: 35px 15px 45px 15px;">
-          <div style="position: absolute; top: 15px; right: 20px; z-index: 10; background: rgba(12, 35, 64, 0.05); border: 1px solid #0c2340; padding: 5px 12px; border-radius: 20px; display: flex; align-items: center; gap: 8px;">
+        <div style="position: relative; height: 460px; background: #fafafa; border-radius: 8px; padding: 45px 15px 50px 15px; box-sizing: border-box;">
+          <div style="position: absolute; top: 15px; right: 20px; z-index: 10; background: rgba(12, 35, 64, 0.05); border: 1px solid #0c2340; padding: 6px 14px; border-radius: 20px; display: flex; align-items: center; gap: 8px;">
             <span style="font-family: 'Montserrat', sans-serif; font-size: 0.8em; font-weight: 700; color: #0c2340;">Adj. Avg:</span>
-            <span style="font-size: 1.1em; font-weight: 700; color: #0c2340;">71.0</span>
+            <span style="font-family: 'Oswald', sans-serif; font-size: 1.2em; font-weight: 700; color: #0c2340;">71.0</span>
           </div>
 
           <canvas id="archiveOfficialChart"></canvas>
 
-          <div style="position: absolute; bottom: 12px; left: 15px; right: 15px; display: flex; justify-content: space-between; font-family: 'Montserrat', sans-serif; font-size: 0.75em; color: #666; border-top: 1px dashed #ddd; padding-top: 8px;">
-            <span><strong>Source:</strong> Scoreboard.Clipped</span>
-            <span><strong>Cumulative:</strong> 5 eventos / 15 rondas</span>
+          <div style="position: absolute; bottom: 12px; left: 15px; right: 15px; display: flex; justify-content: space-between; font-family: 'Montserrat', sans-serif; font-size: 0.75em; color: #888; border-top: 1px dashed #ccc; padding-top: 10px; font-weight: 600;">
+            <span>SOURCE: SCOREBOARD.CLIPPED, WAGR & GOLFSTAT</span>
+            <span>CUMULATIVE: 6 EVENTOS / 18 RONDAS</span>
           </div>
         </div>
       </div>
@@ -757,7 +755,7 @@
         data: [69.66, 71.66, 72.66, 74.00, 72.00, 72.00],
         borderColor: '#F15A22',
         backgroundColor: 'rgba(241, 90, 34, 0.05)',
-        borderWidth: 2.5,
+        borderWidth: 3,
         pointRadius: [10, 6, 6, 6, 6, 12],
         pointHoverRadius: [12, 8, 8, 8, 8, 14],
         pointBackgroundColor: (context) => {
@@ -790,19 +788,19 @@
     options: {
       responsive: true,
       maintainAspectRatio: false,
-      layout: { padding: { top: 30, bottom: 10 } },
+      layout: { padding: { top: 35, bottom: 10, left: 5, right: 5 } },
       interaction: { mode: 'nearest', intersect: true },
       scales: {
         y: {
           min: 65,
           max: 82,
-          grid: { color: '#e5e5e5', drawBorder: false },
+          grid: { color: '#efefef', drawBorder: false },
           ticks: { font: { size: 12, weight: '600' }, color: '#333', padding: 10 },
-          title: { display: true, text: 'Avg. Strokes', color: '#333', font: { size: 12, weight: '700' } }
+          title: { display: true, text: 'AVG. STROKES', color: '#0c2340', font: { size: 11, weight: '700' } }
         },
         x: {
           grid: { display: false },
-          ticks: { color: '#333', font: { size: 10, weight: '400' } }
+          ticks: { color: '#333', font: { size: 10, weight: '500' } }
         }
       },
       plugins: {
@@ -812,7 +810,7 @@
           yAlign: 'bottom',
           backgroundColor: '#0c2340',
           titleColor: '#F15A22',
-          titleFont: { size: 13, weight: '600' },
+          titleFont: { size: 13, weight: '600', family: "'Oswald'" },
           bodyColor: '#ffffff',
           bodyFont: { family: "'Montserrat'", size: 11 },
           padding: 12,
@@ -825,9 +823,10 @@
               const pwr = ['230.8799', '232.6656', '129.0694', '360.1597', '806.3420', '145.6033'];
               const earned = ['5.3735', '4.9097', '3.3178', '3.1971', '6.1052', '6.5774'];
               const i = context.dataIndex;
+              const isSpecial = (i === 4) ? ' (Special Invitational)' : '';
               return [
                 '',
-                `Rounds: ${rounds[i]}`,
+                `Rounds: ${rounds[i]}${isSpecial}`,
                 `Rank: ${rank[i]}`,
                 `-----------------------`,
                 `WAGR Pwr: ${pwr[i]}`,
@@ -843,10 +842,6 @@
   });
 })();
 </script>
-
-  
-  
-
 
   
 <div class="performance-log-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
