--- a/test-1.html
+++ b/test-1.html
@@ -697,7 +697,9 @@
         </div>
     </div>
 </div>
+
   
+<style> /* 오피셜 토너먼트 레코드 그래픽 차트 */</style>
   
 <link href="https://fonts.googleapis.com/css2?family=Marcellus&family=Montserrat:wght@400;700&family=Oswald:wght@400;600&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -707,8 +709,8 @@
   <div style="background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box;">
     <div style="padding: 40px 0; box-sizing: border-box; text-align: center;">
       
-      <h2 style="color: #0c2340; font-family: 'Marcellus', serif; font-size: 1.8em; margin-bottom: 8px; font-weight: 500; letter-spacing: 1.5px; margin-top: 0; text-transform: uppercase;">Performance Data Analysis</h2>
-      <p style="font-size: 0.85em; color: #666; margin-bottom: 45px; font-family: 'Montserrat', sans-serif; letter-spacing: 2px; font-weight: 400; text-transform: uppercase;">Official Tournaments Verified Records</p>
+      <h2 style="margin: 0; color: #0c2340; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">Performance Data Analysis</h2>
+      <p style="font-size: 0.85em; color: #666; margin-bottom: 45px; font-family: 'Montserrat', sans-serif; letter-spacing: 2px; font-weight: 400; text-transform: uppercase; margin-top: 8px;">Official Tournaments Verified Records</p>
       
       <div style="width: 100%; padding: 0 20px; box-sizing: border-box; text-align: left;">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #0c2340; padding-bottom: 8px;">
@@ -769,7 +771,7 @@
           align: 'top',
           anchor: 'end',
           offset: 8,
-          backgroundColor: null, // Removed orange box
+          backgroundColor: null,
           color: '#0c2340',
           font: { weight: '700', size: 13 },
           formatter: function(value, context) {
