--- a/test-1.html
+++ b/test-1.html
@@ -349,7 +349,8 @@
     <div id="Tournament-Schedule-Scoring" style="padding-top: 20px;">
     </div>
 
-<div id="joshua-qualifier-section" style="width: 100%; max-width: 900px; margin: 40px auto; padding: 0; font-family: 'Oswald', sans-serif; box-sizing: border-box; clear: both;">
+
+  <div id="joshua-qualifier-section" style="width: 100%; max-width: 900px; margin: 40px auto; padding: 0; font-family: 'Oswald', sans-serif; box-sizing: border-box; clear: both;">
   
   <div style="margin-bottom: 40px; width: 100%; box-sizing: border-box; padding: 0;">
     <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; border-left: 5px solid #E31837; padding-left: 15px; margin-left: 10px;">
@@ -358,17 +359,17 @@
     </div>
     
     <div style="display: flex; flex-wrap: wrap; gap: 15px; width: 100%; padding: 0 10px; box-sizing: border-box;">
-      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
+      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 12px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
         <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 10 (Tue)</div>
         <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px;">The Canyons Course / 1:00</div>
         <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
       </div>
-      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
+      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 12px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
         <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 12 (Thur)</div>
         <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px;">The Canyons Course / 1:00</div>
         <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
       </div>
-      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
+      <div style="flex: 1; min-width: 250px; background: #ffffff; border: 1.5px solid #0c2340; border-radius: 12px; padding: 20px; text-align: center; box-shadow: 0 4px 10px rgba(0,0,0,0.03); box-sizing: border-box;">
         <div style="font-size: 0.85em; color: #666; margin-bottom: 5px; font-family: 'Montserrat', sans-serif;">Feb 17 (Tue)</div>
         <div style="font-size: 1.05em; font-weight: 600; color: #0c2340; margin-bottom: 12px;">The Canyons Course / 1:00</div>
         <div style="display: inline-block; padding: 4px 15px; background: #f0f0f0; color: #aaa; border-radius: 15px; font-size: 0.9em; font-weight: 700;">TBD</div>
@@ -387,43 +388,45 @@
       </div>
     </div>
 
-    <div style="overflow-x: auto; width: 100%; box-sizing: border-box; padding: 0 10px;">
-      <table style="width: 100%; border-collapse: collapse; background: #ffffff; margin: 0; border: 1.5px solid #0c2340; box-sizing: border-box;">
-        <thead>
-          <tr style="background: #0c2340; color: #ffffff;">
-            <th style="width: 20%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; text-align: center;">Date</th>
-            <th style="width: 45%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; text-align: center;">Course Name</th>
-            <th style="width: 17.5%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; text-align: center;">Score</th>
-            <th style="width: 17.5%; padding: 15px; font-weight: 500; font-size: 0.9em; text-align: center;">To Par</th>
-          </tr>
-        </thead>
-        <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
-          <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);"><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 17, 2026</td><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
-          <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);"><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 12, 2026</td><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
-          <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);"><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 10, 2026</td><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
-          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Jan 22, 2026</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td></tr>
-          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Sep 26, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; font-family: 'Oswald', sans-serif; font-size: 1.1em;">73</td><td style="padding: 12px; font-weight: 600;">+1</td></tr>
-          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Sep 01, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td></tr>
-          <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Aug 28, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td></tr>
-          <tr><td style="padding: 12px; border-right: 1px solid #eee;">Aug 27, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td></tr>
-        </tbody>
-        <tfoot>
-          <tr style="background: #fafafa; border-top: 1.5px solid #0c2340;">
-            <td style="width: 20%; padding: 12px; border-right: 1px solid #eee;"></td>
-            <td style="width: 45%; padding: 12px 15px; text-align: right; border-right: 1px solid #eee; font-weight: 600; font-size: 0.85em; color: #888; font-family: 'Montserrat', sans-serif;">Course Cumulative Performance:</td>
-            <td style="width: 17.5%; padding: 12px; text-align: center; border-right: 1px solid #eee;">
-              <span style="font-weight: 700; font-size: 1.05em; font-family: 'Oswald', sans-serif;">
-                <span style="color: #0c2340;">Avg. </span><span style="color: #E31837;">69.4</span>
-              </span>
-            </td>
-            <td style="width: 17.5%; padding: 12px; text-align: center;">
-              <div style="background: #E31837; color: #ffffff; width: 32px; height: 32px; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: 700; font-size: 0.85em; font-family: 'Oswald', sans-serif;">
-                -2.6
-              </div>
-            </td>
-          </tr>
-        </tfoot>
-      </table>
+    <div style="overflow: hidden; width: 100%; box-sizing: border-box; padding: 0 10px;">
+      <div style="border: 1.5px solid #0c2340; border-radius: 12px; overflow: hidden;">
+        <table style="width: 100%; border-collapse: collapse; background: #ffffff; margin: 0; box-sizing: border-box;">
+          <thead>
+            <tr style="background: #0c2340; color: #ffffff;">
+              <th style="width: 20%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; text-align: center;">Date</th>
+              <th style="width: 45%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; text-align: center;">Course Name</th>
+              <th style="width: 17.5%; padding: 15px; border-right: 1px solid rgba(255,255,255,0.1); font-weight: 500; font-size: 0.9em; text-align: center;">Score</th>
+              <th style="width: 17.5%; padding: 15px; font-weight: 500; font-size: 0.9em; text-align: center;">To Par</th>
+            </tr>
+          </thead>
+          <tbody style="text-align: center; color: #333; font-family: 'Montserrat', sans-serif;">
+            <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);"><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 17, 2026</td><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
+            <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);"><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 12, 2026</td><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
+            <tr style="border-bottom: 1px solid #eee; background: rgba(12, 35, 64, 0.02);"><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">Feb 10, 2026</td><td style="padding: 12px; border-right: 1px solid #eee; color: #888;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #ccc; font-family: 'Oswald', sans-serif;">TBD</td><td style="padding: 12px; color: #ccc;">--</td></tr>
+            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Jan 22, 2026</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td></tr>
+            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Sep 26, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; font-family: 'Oswald', sans-serif; font-size: 1.1em;">73</td><td style="padding: 12px; font-weight: 600;">+1</td></tr>
+            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Sep 01, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td></tr>
+            <tr style="border-bottom: 1px solid #eee;"><td style="padding: 12px; border-right: 1px solid #eee;">Aug 28, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">68</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-4</td></tr>
+            <tr><td style="padding: 12px; border-right: 1px solid #eee;">Aug 27, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td></tr>
+          </tbody>
+          <tfoot>
+            <tr style="background: #fafafa; border-top: 1.5px solid #0c2340;">
+              <td style="width: 20%; padding: 12px; border-right: 1px solid #eee;"></td>
+              <td style="width: 45%; padding: 12px 15px; text-align: right; border-right: 1px solid #eee; font-weight: 600; font-size: 0.85em; color: #888; font-family: 'Montserrat', sans-serif;">Course Cumulative Performance:</td>
+              <td style="width: 17.5%; padding: 12px; text-align: center; border-right: 1px solid #eee;">
+                <span style="font-weight: 700; font-size: 1.05em; font-family: 'Oswald', sans-serif;">
+                  <span style="color: #0c2340;">Avg. </span><span style="color: #E31837;">69.4</span>
+                </span>
+              </td>
+              <td style="width: 17.5%; padding: 12px; text-align: center;">
+                <div style="background: #E31837; color: #ffffff; width: 32px; height: 32px; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: 700; font-size: 0.85em; font-family: 'Oswald', sans-serif;">
+                  -2.6
+                </div>
+              </td>
+            </tr>
+          </tfoot>
+        </table>
+      </div>
     </div>
   </div>
 </div>
