--- a/test-1.html
+++ b/test-1.html
@@ -511,7 +511,7 @@
             </div>
         </div>
 
-        <div style="margin-top: 30px; padding-left: 10px; font-size: 10px; color: #cbd5e1; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; box-sizing: border-box;">
+        <div style="margin-top: 10px; padding-left: 10px; font-size: 10px; color: #cbd5e1; font-weight: 800; text-transform: uppercase; letter-spacing: 1px; box-sizing: border-box;">
             Joshua's Memo Note
         </div>
     </div>
@@ -524,9 +524,9 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
 
-<div class="performance-analysis-wrapper" style="width: 100%; max-width: 900px; margin: 20px auto 30px auto; padding: 0; background: transparent; box-sizing: border-box;">
+<div class="performance-analysis-wrapper" style="width: 100%; max-width: 900px; margin: 0px auto 30px auto; padding: 0; background: transparent; box-sizing: border-box;">
   <div style="background: #ffffff; border: 1px solid #eeeeee; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.05); overflow: hidden; box-sizing: border-box;">
-    <div style="padding: 40px 0; box-sizing: border-box; text-align: center;">
+    <div style="padding: 20px 0 40px 0; box-sizing: border-box; text-align: center;">
       
       <h2 style="margin: 0; color: #0c2340; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase;">Performance Data Analysis</h2>
       <p style="font-size: 0.85em; color: #666; margin-bottom: 45px; font-family: 'Montserrat', sans-serif; letter-spacing: 2px; font-weight: 400; text-transform: uppercase; margin-top: 8px;">Official Tournaments Verified Records</p>
