--- a/test-1.html
+++ b/test-1.html
@@ -458,7 +458,7 @@
     <div class="legal-pad-content" style="background: #fff9c4; background-image: linear-gradient(#e5e0a3 1px, transparent 1px); background-size: 100% 28px; border-left: 1px solid #e5e0a3; border-right: 1px solid #e5e0a3; border-bottom: 4px solid #d4cf92; border-radius: 0 0 60px 60px; padding: 40px; position: relative; box-shadow: 0 15px 30px rgba(0,0,0,0.07); display: flex; flex-direction: column; box-sizing: border-box; width: 100%;">
         
         <div style="margin-bottom: 45px; position: relative; box-sizing: border-box;">
-            <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase; box-sizing: border-box;">Date: Feb 05, 2026</span>
+            <span style="font-size: 14px; color: #d32f2f; font-weight: 700; text-transform: uppercase; box-sizing: border-box;">Date: Feb 09, 2026</span>
             <h3 style="margin: 10px 0 0 0; color: #0c2340; font-size: 24px; font-weight: 900; text-transform: uppercase; border-bottom: 2px solid #0c2340; display: inline-block; box-sizing: border-box;">
                 Performance Analysis & Training Plan
             </h3>
@@ -470,8 +470,8 @@
                 <div style="box-sizing: border-box;">
                     <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">R3 Technical Feedback</h4>
                     <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box;">
-                        <strong>Status:</strong> Increased yardage applied under narrow fairway/high-wind conditions. Driver and long-iron dispersion data recorded for technical adjustment and subsequent training. <br>
-                        <strong>Focus:</strong> Maintaining consistent short-game execution (wedge/putting) while prioritizing dispersion recalibration.
+                        <strong>Status:</strong> Increased yardage applied under narrow fairway and high-wind conditions during recent competition. Driver and long-iron dispersion data has been recorded and remains under technical review. <br>
+                        <strong>Focus:</strong> Short-game execution (wedge/putting) continues to be logged without material deviation. Dispersion recalibration remains under review.
                     </p>
                 </div>
             </div>
@@ -481,7 +481,8 @@
                 <div style="box-sizing: border-box;">
                     <h4 style="margin: 0; font-size: 15px; color: #0c2340; font-weight: 900; text-transform: uppercase; background: rgba(0,0,0,0.05); display: inline-block; padding: 0 5px; box-sizing: border-box;">Corrective Training</h4>
                     <p style="margin: 8px 0 0 0; font-size: 14.5px; color: #2c3e50; line-height: 28px; font-weight: 500; box-sizing: border-box;">
-                        <strong>Feb 4:</strong> Technical training session conducted to address driver dispersion and long-iron control in preparation for the home tournament (Feb 23–24). Academic scheduling adjustments finalized to maintain balance with upcoming competition commitments.
+                        <strong>Technical:</strong> Recent training sessions have addressed driver dispersion and long-iron control. <br>
+                        <strong>Academic:</strong> Scheduling adjustments are in place to accommodate coursework, assignments, and upcoming competition dates.
                     </p>
                 </div>
             </div>
@@ -497,16 +498,16 @@
             
             <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 1px solid #f1f5f9; padding-bottom: 10px; margin-bottom: 12px; box-sizing: border-box;">
                 <h5 style="margin: 0; font-size: 14px; color: #d32f2f; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">Next Event Focus & Updates</h5>
-                <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; box-sizing: border-box;">Spring Opener Technical Memo</span>
+                <span style="font-size: 10px; color: #94a3b8; font-weight: 800; text-transform: uppercase; box-sizing: border-box;">Home Field Qualifying — Technical Memo</span>
             </div>
             <div style="display: flex; flex-wrap: wrap; gap: 20px; box-sizing: border-box;">
                 <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
-                    • Target: Home-Field Team Title<br>
-                    • Drills: Dispersion Control (w/ Bryan)
+                    • Event: Home Field Qualifying (Feb 10, 12, 17)<br>
+                    • Technical: Driver dispersion recalibration & long-iron accuracy
                 </p>
                 <p style="margin: 0; font-size: 13.5px; color: #0c2340; font-weight: 700; line-height: 1.6; flex: 1; min-width: 240px; box-sizing: border-box;">
-                    • Academic: Coursework management<br>
-                    • Status: Training Schedule Optimized
+                    • Academic: Coursework and deadlines integrated into schedule<br>
+                    • Status: Training and academic schedules aligned
                 </p>
             </div>
         </div>
