--- a/test-1.html
+++ b/test-1.html
@@ -410,20 +410,22 @@
             <tr><td style="padding: 12px; border-right: 1px solid #eee;">Aug 27, 2025</td><td style="padding: 12px; border-right: 1px solid #eee;">The Canyons Course</td><td style="padding: 12px; border-right: 1px solid #eee; font-weight: 700; color: #E31837; font-family: 'Oswald', sans-serif; font-size: 1.1em;">69</td><td style="padding: 12px; color: #E31837; font-weight: 600;">-3</td></tr>
           </tbody>
           <tfoot>
-            <tr style="background: #fafafa; border-top: 1.5px solid #0c2340;">
-              <td style="width: 20%; padding: 12px; border-right: 1px solid #eee;"></td>
-              <td style="width: 45%; padding: 12px 15px; text-align: right; border-right: 1px solid #eee; font-weight: 600; font-size: 0.85em; color: #888; font-family: 'Montserrat', sans-serif;">Course Cumulative Performance:</td>
-              <td style="width: 17.5%; padding: 12px; text-align: center; border-right: 1px solid #eee;">
-                <span style="font-weight: 700; font-size: 1.05em; font-family: 'Oswald', sans-serif;">
-                  <span style="color: #0c2340;">Avg. </span><span style="color: #E31837;">69.4</span>
-                </span>
-              </td>
-              <td style="width: 17.5%; padding: 12px; text-align: center;">
-                <div style="background: #E31837; color: #ffffff; width: 32px; height: 32px; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: 700; font-size: 0.85em; font-family: 'Oswald', sans-serif;">
-                  -2.6
-                </div>
-              </td>
-            </tr>
+          <tr style="background: #fafafa; border-top: 1.5px solid #0c2340;">
+  <td style="width: 20%; padding: 12px; border-right: 1px solid #eee;"></td>
+  <td style="width: 45%; padding: 12px 15px; text-align: center; border-right: 1px solid #eee; font-weight: 600; font-size: 0.85em; color: #888; font-family: 'Montserrat', sans-serif;">
+    AVG. Course Cumulative Performance:
+  </td>
+  <td style="width: 17.5%; padding: 12px; text-align: center; border-right: 1px solid #eee;">
+    <span style="font-weight: 700; font-size: 1.05em; font-family: 'Oswald', sans-serif; color: #E31837;">
+      69.4
+    </span>
+  </td>
+  <td style="width: 17.5%; padding: 12px; text-align: center;">
+    <span style="font-weight: 700; font-size: 1.05em; font-family: 'Oswald', sans-serif; color: #E31837;">
+      -2.6
+    </span>
+  </td>
+</tr>
           </tfoot>
         </table>
       </div>
