--- a/test-1.html
+++ b/test-1.html
@@ -439,7 +439,7 @@
 
 
 
-<div class="current-focus-section" style="width: 100%; max-width: 900px; margin: 30px auto 40px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="current-focus-section" style="width: 100%; max-width: 900px; margin: 30px auto 40px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
     <a id="current-focus" style="display: block; position: relative; top: -100px; visibility: hidden;"></a>
     <div style="border-bottom: 2px solid #0c2340; padding-bottom: 20px; margin-bottom: 40px; text-align: center; box-sizing: border-box;">
         <h1 style="margin: 0; color: #0c2340; font-size: 26px; letter-spacing: 2px; font-weight: 900; text-transform: uppercase; box-sizing: border-box;">
@@ -520,9 +520,8 @@
     </div>
 </div>
 
-  
 <style> /* 오피셜 토너먼트 레코드 그래픽 차트 */</style>
-  
+
 <link href="https://fonts.googleapis.com/css2?family=Marcellus&family=Montserrat:wght@400;700&family=Oswald:wght@400;600&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.2.0"></script>
