--- a/test-2.html
+++ b/test-2.html
@@ -86,23 +86,19 @@
       </div>
 
       <div class="stats-container" style="display: flex; align-items: center; gap: 30px;">
-        <div class="score-group" style="display: flex; flex-direction: column; gap: 6px; border-right: 1px solid #f1f5f9; padding-right: 30px;">
-          <div style="display: flex; justify-content: flex-end; gap: 35px;">
-            <div style="display: flex; width: 100px; justify-content: space-between;">
-              <span style="color: #94a3b8; font-size: 10px; font-weight: 800;">Q1</span>
-              <span style="color: #94a3b8; font-size: 10px; font-weight: 800;">Q2</span>
-              <span style="color: #94a3b8; font-size: 10px; font-weight: 800;">Q3</span>
+        <div class="score-group" style="display: flex; flex-direction: column; gap: 6px; border-right: 1px solid #f1f5f9; padding-right: 40px;">
+          <div style="display: flex; justify-content: flex-end;">
+            <div style="display: flex; width: 140px; justify-content: space-between;">
+              <span style="color: #94a3b8; font-size: 10px; font-weight: 800; width: 40px; text-align: center;">Q1</span>
+              <span style="color: #94a3b8; font-size: 10px; font-weight: 800; width: 40px; text-align: center;">Q2</span>
+              <span style="color: #94a3b8; font-size: 10px; font-weight: 800; width: 40px; text-align: center;">Q3</span>
             </div>
-            <span style="color: #94a3b8; font-size: 10px; font-weight: 800; width: 60px; text-align: right;">TOTAL</span>
           </div>
-          <div style="display: flex; justify-content: flex-end; gap: 35px; align-items: center;">
-            <div style="display: flex; width: 100px; justify-content: space-between; align-items: center;">
-              <span style="color: #cbd5e1; font-size: 17px; font-weight: 800; min-width: 25px; text-align: center;">TBD</span>
-              <span style="color: #cbd5e1; font-size: 17px; font-weight: 800; min-width: 25px; text-align: center;">TBD</span>
-              <span style="color: #cbd5e1; font-size: 17px; font-weight: 800; min-width: 25px; text-align: center;">TBD</span>
-            </div>
-            <div style="display: flex; width: 60px; justify-content: flex-end;">
-              <span style="color: #0c2340; font-size: 17px; font-weight: 900;">--</span>
+          <div style="display: flex; justify-content: flex-end; align-items: center;">
+            <div style="display: flex; width: 140px; justify-content: space-between; align-items: center;">
+              <span style="color: #cbd5e1; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">-</span>
+              <span style="color: #cbd5e1; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">-</span>
+              <span style="color: #cbd5e1; font-size: 19px; font-weight: 800; width: 40px; text-align: center;">-</span>
             </div>
           </div>
         </div>
@@ -116,7 +112,7 @@
     </div>
   </div>
 
-  <a href="ncaa-stats.html#Tournament-Schedule-Scoring" class="focus-container">
+  <a href="ncaa-stats.html#Current-Focus" class="focus-container">
     <div style="display: flex; align-items: flex-start; gap: 20px; flex: 1;">
       <div class="focus-badge" style="margin-top: 2px;">
         <span style="width: 6px; height: 6px; background: #ffffff; border-radius: 50%;"></span>
