--- a/index.html
+++ b/index.html
@@ -266,7 +266,10 @@ gtag('config', 'G-H1JW8YBDZ8');
 </div>
 
 
-    
+   <div style="position: relative; text-align: center; margin-bottom: 25px; padding: 10px 0; overflow: hidden;">
+    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); font-size: clamp(40px, 10vw, 80px); font-weight: 900; color: rgba(12, 35, 64, 0.04); white-space: nowrap; z-index: 1; pointer-events: none; letter-spacing: -2px;">
+      UTSA
+    </div>   
 
 <div class="index-activity-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; width: 100%;">
   
@@ -420,7 +423,7 @@ gtag('config', 'G-H1JW8YBDZ8');
     
 
 
- <div style="position: relative; text-align: center; margin-bottom: 25px; padding: 10px 0; overflow: hidden;">   
+
     <div style="position: relative; z-index: 2;">
       <h2 style="font-size: clamp(28px, 5vw, 36px); color: #0c2340; margin: 0; font-weight: 800; display: inline-block;">
         Schedule <span style="font-weight: 300; color: #777;">&</span> Results
